Fix navbar and portrait wrong positioned on large screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@
 
     --main-transition-time: .75s;
 
-    --max-width: 1100px;
+    --max-width: 1920px;
 }
 
 body.darkmode {
