--- a/styles/welcome-section.styles.css
+++ b/styles/welcome-section.styles.css
@@ -5,7 +5,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    max-width: 1920px;
 }
 
 .navbar {
@@ -213,6 +212,6 @@
 
     .welcome-portrait {
         right: -10em;
-        height: 50rem;
+        height: 95%;
     }
 }
